Change development server database on appSettingJson

--- a/QdaoCaseManager/QdaoCaseManager/appsettings.Development.json
+++ b/QdaoCaseManager/QdaoCaseManager/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Server=.;Database=QdaoCaseManagerDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
