--- a/QdaoCaseManager/QdaoCaseManager/appsettings.Development.json
+++ b/QdaoCaseManager/QdaoCaseManager/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Server=.;Database=QdaoCaseManagerDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=QdaoCaseManagerDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
