Add Sending Email. Create Email Service Add Secret Key

--- a/QdaoCaseManager/QdaoCaseManager/appsettings.json
+++ b/QdaoCaseManager/QdaoCaseManager/appsettings.json
@@ -33,5 +33,9 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
+  },
+  "SendGrid": {
+    "SenderEmail": "nakibul@softrise.xyz",
+    "SenderName": "Md Nakibul Islam Shaki"
   }
 }
