Add new Class liabrary

--- a/QdaoCaseManager/QdaoCaseManager/appsettings.json
+++ b/QdaoCaseManager/QdaoCaseManager/appsettings.json
@@ -35,7 +35,7 @@
     "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
   },
   "SendGrid": {
-    "SenderEmail": "nakibul@softrise.xyz",
-    "SenderName": "Md Nakibul Islam Shaki"
+    "SenderEmail": "info@softrise.xyz",
+    "SenderName": "Softrise"
   }
 }
