fix paggination rendering problem

--- a/QdaoCaseManager/QdaoCaseManager/QdaoCaseManager.csproj
+++ b/QdaoCaseManager/QdaoCaseManager/QdaoCaseManager.csproj
@@ -27,4 +27,8 @@
     <Folder Include="logs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\QdaoCaseManager.Client\Shared\TItem.razor" Link="TItem.razor" />
+  </ItemGroup>
+
 </Project>
