Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_casemanager.yml
+++ b/.github/workflows/master_casemanager.yml
@@ -40,12 +40,21 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_75B192D4A05240D2B9EDC5C0FD420C70 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F40B72D869D843BE9E5FD171744D9FDB }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_862B8288BAB94A34AECEF765BCC41ACF }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,5 +62,5 @@ jobs:
         with:
           app-name: 'casemanager'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_89717D9DFEAA46259A0C6D2EC9F5C399 }}
           package: .
+          
