--- a/QdaoCaseManager.Domain/QdaoCaseManager.Domain.csproj
+++ b/QdaoCaseManager.Domain/QdaoCaseManager.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QdaoCaseManager.DTOs\QdaoCaseManager.DTOs.csproj" />
+  </ItemGroup>
+
 </Project>
