--- a/QdaoCaseManager/QdaoCaseManager.Client/QdaoCaseManager.Client.csproj
+++ b/QdaoCaseManager/QdaoCaseManager.Client/QdaoCaseManager.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\QdaoCaseManager.DTOs\QdaoCaseManager.DTOs.csproj" />
+  </ItemGroup>
+
 </Project>
