--- a/QdaoCaseManager/QdaoCaseManager/QdaoCaseManager.csproj
+++ b/QdaoCaseManager/QdaoCaseManager/QdaoCaseManager.csproj
@@ -15,7 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\QdaoCaseManager.Infrastructure\QdaoCaseManager.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\QdaoCaseManager.Application\QdaoCaseManager.Application.csproj" />
+    <ProjectReference Include="..\..\QdaoCaseManager.DTOs\QdaoCaseManager.DTOs.csproj" />
     <ProjectReference Include="..\QdaoCaseManager.Client\QdaoCaseManager.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
