--- a/QdaoCaseManager.Infrastructure/QdaoCaseManager.Infrastructure.csproj
+++ b/QdaoCaseManager.Infrastructure/QdaoCaseManager.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="ADO.Net.Client.Core" Version="1.4.5" />
+	  <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
