--- a/QdaoCaseManager/QdaoCaseManager/Properties/launchSettings.json
+++ b/QdaoCaseManager/QdaoCaseManager/Properties/launchSettings.json
@@ -7,6 +7,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:49839;http://localhost:49840"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:49839",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:49839;http://localhost:49840"
+      },
+      "distributionName": ""
     }
   }
 }
