--- a/QdaoCaseManager.Infrastructure/QdaoCaseManager.Infrastructure.csproj
+++ b/QdaoCaseManager.Infrastructure/QdaoCaseManager.Infrastructure.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
 	  <PackageReference Include="ADO.Net.Client.Core" Version="1.4.5" />
-	  <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
@@ -19,6 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\QdaoCaseManager.Domain\QdaoCaseManager.Domain.csproj" />
     <ProjectReference Include="..\QdaoCaseManager.DTOs\QdaoCaseManager.DTOs.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 </Project>
